# CSC14003-AIP1

./: .gitignore  README.md  benchmark_results_time.csv  main.py  package-lock.json  pyproject.toml  requirements.txt
docs/: Evolution Strategies.md  abc.tex  aco.tex  biology.tex  biology_references.bib  conclusion.tex  convergence.tex  cs.tex  design.tex  fa.tex  pso.tex  solution_quality.tex  visualize_biology.ipynb  visualize_discrete.ipynb  visualize_sphere.ipynb  visualize_tsp.ipynb
src/: benchmark.py  main.py
src/AIP/: __init__.py  benchmark.py  main.py
src/AIP/algorithm/: __init__.py  base_algorithm.py  base_model.py
src/AIP/problems/: __init__.py  base_problem.py
src/algorithm/: __init__.py  base_model.py
src/algorithm/classical/: AStar.py  BFS.py  DFS.py  GreedyBestFirst.py  UCS.py
src/algorithm/local/: HillClimbing.py
src/algorithm/natural/: __init__.py
src/algorithm/physics/: GSA.py  HS.py  SA.py
src/comparision/: compare_ackley.py  compare_all.py  compare_graph_coloring.py  compare_griewank.py  compare_knapsack.py  compare_rastrigin.py  compare_rosenbrock.py  compare_sphere.py  compare_tsp.py  comparison_utils.py  comparison_utils_discrete.py  profiler.py  rebuild_figures.py
src/comparision/configs/: Sphere.json
src/comparision/figures/: compare_ackley_dim_10.json  compare_ackley_dim_2.json  compare_sphere_dim_2.json  (+24 more)
src/problems/: __init__.py  base_problem.py
tests/: as.py  demo_evolution.py  demo_graph_coloring.py  demo_graph_search.py  demo_knapsack.py  demo_local_search.py  demo_physics_algorithms.py  demo_tsp.py  test_hc_both.py
(+92 files in other folders)
